--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bnomei/kirby3-page-sqlite",
   "type": "kirby-plugin",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Kirby 3 Plugin to cache the content file using SQLite",
   "license": "MIT",
   "authors": [
@@ -35,8 +35,7 @@
   "require-dev": {
     "phpunit/phpunit": "^8.3",
     "getkirby/cms": "^3.2",
-    "php-coveralls/php-coveralls": "^2.1",
-    "nunomaduro/phpinsights": "^1.8"
+    "php-coveralls/php-coveralls": "^2.1"
   },
   "scripts": {
     "analyze": "phpstan analyse classes",
